# mc-link

./: .gitignore  README.md  build-all.ps1  build-client.ps1  config.yml  index.html  package.json  pnpm-lock.yaml  rename-build.js  vite.config.ts
.github/workflows/: build.yml
central-server/: .gitignore  Cargo.toml  config.yaml.example
central-server/.github/workflows/: build.yml
central-server/src/: main.rs
mc-link-relay/: Cargo.toml  build-docker.sh  config.yml.example
mc-link-relay/.github/workflows/: build.yml
mc-link-relay/src/: main.rs
public/: tray-menu.html
src/: App.vue
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: central.rs  client.rs  commands.rs  crypto.rs  host.rs  lan.rs  latency.rs  lib.rs  main.rs  protocol.rs  relay.rs  routing.rs  state.rs  tray.rs
src/components/: ConnectPage.vue  IconSidebar.vue  PageContent.vue  RelayPage.vue  TextSidebar.vue
src/components/ui/: Button.vue  Card.vue  WindowControlButton.vue
