[package]
name = "mc-link-relay"
version = "0.2.0"
edition = "2021"
authors = ["Cugo", "Prism Team"]

[dependencies]
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1.0"
uuid = { version = "1.0", features = ["v4"] }
log = "0.4"
env_logger = "0.10"
local-ip-address = "0.5"
rand = "0.8"
hex = "0.4"
aes = "0.8"
cipher = "0.4"
sha2 = "0.10"