[package]
name = "mc-link"
version = "0.2.8"
description = "MC Link - 我的世界联机工具"
authors = ["棱镜Prism工作室"]
edition = "2021"

[lib]
name = "mc_link_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
tauri-plugin-global-shortcut = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
aes = "0.8"
cipher = { version = "0.4", features = ["block-padding"] }
rand = "0.8"
uuid = { version = "1.0", features = ["v4"] }
chrono = "0.4"
raw-window-handle = "0.6"
